[package]
name = "avsocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.149"
bincode = {version = "1.3.3"}
macros = {path = "./macros"}

serde = {version = "1.0.190", features = ["derive"]}
uuid = {version = "1.5.0", features = ["v4"]}
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = {version = "0.7.10", features = ["codec"]}
anyhow = "1.0.75"
